--- a/src/templates/env_workflow_land_only.xml
+++ b/src/templates/env_workflow_land_only.xml
@@ -24,26 +24,26 @@
       <type>char</type>
       <desc>project for project-sensitive build and run paths, and job scripts</desc>
     </entry>
-    <entry id="BATCH_COMMAND_FLAGS" value="-Ep clm_run_error_touch.sh -W 01:00 -q $ENV{parallelq_m} -P $ENV{pID} -x -e logs/$CASE.run_%J.err -o logs/$CASE.run_%J.out">
+    <entry id="BATCH_COMMAND_FLAGS" value="-Ep clm_run_error_touch.sh -W 01:00 -q $ENV{parallelq_s} -P $ENV{pID} -x -e logs/$CASE.run_%J.err -o logs/$CASE.run_%J.out">
       <type>char</type>
       <valid_values/>
       <desc>Override the batch submit command this job. Do not include executable or dependencies</desc>
     </entry>
-    <entry id="JOB_WALLCLOCK_TIME" value="04:00">
+    <entry id="JOB_WALLCLOCK_TIME" value="01:00">
       <type>char</type>
       <valid_values/>
       <desc>The machine wallclock setting.  Default determined in config_machines.xml can be overwritten by testing</desc>
     </entry>
-    <entry id="JOB_QUEUE" value="p_medium">
+    <entry id="JOB_QUEUE" value="p_short">
       <type>char</type>
       <valid_values/>
       <desc>The machine queue in which to submit the job.  Default determined in config_machines.xml can be overwritten by testing</desc>
     </entry>
-    <entry id="USER_REQUESTED_WALLTIME" value="04:00">
+    <entry id="USER_REQUESTED_WALLTIME" value="01:00">
       <type>char</type>
       <desc>Store user override for walltime</desc>
     </entry>
-    <entry id="USER_REQUESTED_QUEUE" value="p_medium">
+    <entry id="USER_REQUESTED_QUEUE" value="p_short">
       <type>char</type>
       <desc>Store user override for queue</desc>
     </entry>
